.k8s/bases/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instagram-clone-frontend-deployment
  labels:
    app: instagram-clone
    tier: frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instagram-clone
      tier: frontend
  template:
    metadata:
      labels:
        app: instagram-clone
        tier: frontend
    spec:
      containers:
      - name: instagram-clone-frontend
        image: haq2682/instagram_clone_frontend:latest
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
          - mountPath: /usr/share/nginx/html/uploads
            name: instagram-clone-frontend-volume
        resources:  
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 2
            memory: 2Gi
      volumes:
      - name: instagram-clone-frontend-volume
        persistentVolumeClaim:
          claimName: instagram-clone-frontend-pvc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: instagram-clone-backend-deployment
  labels:
    app: instagram-clone
    tier: backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instagram-clone
      tier: backend
  template:
    metadata:
      labels:
        app: instagram-clone
        tier: backend
    spec:
      containers:
      - name: instagram-clone-backend
        image: haq2682/instagram_clone_backend:latest
        ports:
        - containerPort: 8000
        startupProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /app/uploads
          name: instagram-clone-backend-volume
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 2
            memory: 2Gi
      volumes:
      - name: instagram-clone-backend-volume
        persistentVolumeClaim:
          claimName: instagram-clone-backend-pvc
