.k8s/bases/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: instagram-clone-frontend-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: instagram-clone
    tier: frontend
  ports:
    - port: 80
      nodePort: 31275
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: instagram-clone-backend-service
  namespace: dev
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app: instagram-clone
    tier: backend
  ports:
    - port: 8000
      targetPort: 8000
      name: "instagram-clone-backend-service-port"
